--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="loadUser()">
+        10 user data
+    </button>
+    <button onclick="loadUser2()">
+        All player name show
+    </button>
+
+
+    <div id="show">
+
+    </div>
+
+
+    <main>
+        <ul id="list">
     
+        </ul>
+    </main>
+
+
+
+
+
+    <!-- script -->
+
     <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
