--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styel.css">
 </head>
 <body>
     <button onclick="loadUser()">
@@ -14,10 +15,7 @@
     </button>
 
 
-    <div id="show">
-
-    </div>
-
+    
 
     <main>
         <ul id="list">
@@ -25,6 +23,9 @@
         </ul>
     </main>
 
+    <div id="show">
+
+    </div>
 
 
 
@@ -33,5 +34,6 @@
 
     <script src="script.js"></script>
     <script src="app.js"></script>
+    <script src="showDisplay.js"></script>
 </body>
 </html>
